--- a/AGGRA_dockwidget_base.ui
+++ b/AGGRA_dockwidget_base.ui
@@ -54,7 +54,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
@@ -90,6 +90,11 @@
               <height>16777215</height>
              </size>
             </property>
+            <property name="font">
+             <font>
+              <pointsize>11</pointsize>
+             </font>
+            </property>
             <property name="styleSheet">
              <string notr="true">background-color: #f0f0f0;
 
@@ -107,6 +112,11 @@ padding: 5px; /* padding inside the text edit */</string>
               <width>16777215</width>
               <height>120</height>
              </size>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>12</pointsize>
+             </font>
             </property>
             <property name="styleSheet">
              <string notr="true">background-color: #ffffff; /* light gray background */
