--- a/AGGRA_dockwidget_base.ui
+++ b/AGGRA_dockwidget_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>774</width>
-    <height>827</height>
+    <width>683</width>
+    <height>783</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -54,7 +54,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
@@ -247,8 +247,8 @@ padding: 5px; /* padding inside the text edit */
          <rect>
           <x>10</x>
           <y>10</y>
-          <width>31</width>
-          <height>16</height>
+          <width>50</width>
+          <height>20</height>
          </rect>
         </property>
         <property name="sizePolicy">
@@ -259,21 +259,27 @@ padding: 5px; /* padding inside the text edit */
         </property>
         <property name="maximumSize">
          <size>
-          <width>50</width>
-          <height>20</height>
+          <width>16777215</width>
+          <height>16777215</height>
          </size>
         </property>
+        <property name="inputMethodHints">
+         <set>Qt::ImhNone</set>
+        </property>
         <property name="text">
-         <string>Models</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;Models&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
         </property>
        </widget>
        <widget class="QComboBox" name="modelNameComboBox">
         <property name="geometry">
          <rect>
-          <x>50</x>
+          <x>80</x>
           <y>10</y>
           <width>131</width>
-          <height>20</height>
+          <height>21</height>
          </rect>
         </property>
         <property name="sizePolicy">
@@ -287,6 +293,11 @@ padding: 5px; /* padding inside the text edit */
           <width>16777215</width>
           <height>16777215</height>
          </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>9</pointsize>
+         </font>
         </property>
         <item>
          <property name="text">
@@ -308,7 +319,7 @@ padding: 5px; /* padding inside the text edit */
         <property name="geometry">
          <rect>
           <x>320</x>
-          <y>90</y>
+          <y>160</y>
           <width>31</width>
           <height>20</height>
          </rect>
@@ -333,7 +344,7 @@ padding: 5px; /* padding inside the text edit */
         <property name="geometry">
          <rect>
           <x>320</x>
-          <y>70</y>
+          <y>140</y>
           <width>31</width>
           <height>20</height>
          </rect>
@@ -358,8 +369,8 @@ padding: 5px; /* padding inside the text edit */
         <property name="geometry">
          <rect>
           <x>1</x>
-          <y>49</y>
-          <width>50</width>
+          <y>70</y>
+          <width>60</width>
           <height>16</height>
          </rect>
         </property>
@@ -371,19 +382,22 @@ padding: 5px; /* padding inside the text edit */
         </property>
         <property name="maximumSize">
          <size>
-          <width>60</width>
-          <height>20</height>
+          <width>16777215</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="text">
-         <string>API_Keys</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;API Keys&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
         </property>
        </widget>
        <widget class="QTableWidget" name="tableWidget">
         <property name="geometry">
          <rect>
           <x>1</x>
-          <y>67</y>
+          <y>137</y>
           <width>321</width>
           <height>85</height>
          </rect>
@@ -419,6 +433,29 @@ padding: 5px; /* padding inside the text edit */
           <string>API Key</string>
          </property>
         </column>
+       </widget>
+       <widget class="QLabel" name="label">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>90</y>
+          <width>321</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="inputMethodHints">
+         <set>Qt::ImhMultiLine</set>
+        </property>
+        <property name="text">
+         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Note: API keys input here will only be stored locally on the user's computer ('plugin_dir/LLM-Find/config.ini'). &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
        </widget>
       </widget>
       <widget class="QWidget" name="tab">
